
import { status } from '@grpc/grpc-js'
import { BadRequestException, Injectable } from '@nestjs/common';
import { RpcException } from '@nestjs/microservices'
import { EmploymentStatus, Gender, Role } from '@prisma/client';
import * as bcrypt from 'bcrypt'
import { PrismaService } from '../prisma/prisma.service'
import { UserDto } from '../../../libs/contracts/src/users/user.dto';
import { createUserDto } from '../../../libs/contracts/src/users/create-user.dto';
import { ApiResponse } from '../../../libs/contracts/src/ApiReponse/api-response';

@Injectable()
export class UsersService {
    constructor(private prisma: PrismaService) { }

    async getUserByUsername(username: string): Promise<UserDto | null> {

        const user = await this.prisma.user.findUnique({ where: { username } })
        if (!user) throw new RpcException({ statusCode: 401, message: 'invalid credentials!' })
        return user
    }

    async getUserById(userId: string): Promise<UserDto | null> {
        const user = await this.prisma.user.findUnique({ where: { userId } })
        if (!user)
            throw new RpcException({ statusCode: 401, message: 'invalid credentials!' })
        return user
    }

    async createUser(data: createUserDto): Promise<ApiResponse<any>> {
        try {
            // üîπ 1. Ki·ªÉm tra d·ªØ li·ªáu ƒë·∫ßu v√†o
            if (!data.username || !data.email || !data.password || !data.role) {
                throw new BadRequestException(new ApiResponse(false, 'Missing required fields (username, email, password, role)'));
            }

            if (!Object.values(Role).includes(data.role)) {
                throw new BadRequestException(new ApiResponse(false, `Invalid role. Allowed roles: ${Object.values(Role).join(', ')}`));
            }

            // üîπ 2. Ki·ªÉm tra user ƒë√£ t·ªìn t·∫°i ch∆∞a
            const existingUser = await this.prisma.user.findFirst({
                where: {
                    OR: [{ username: data.username }, { email: data.email }],
                },
            });

            if (existingUser) {
                throw new BadRequestException(new ApiResponse(false, 'Username or email already exists'));
            }

            // üîπ 3. Hash m·∫≠t kh·∫©u tr∆∞·ªõc khi l∆∞u v√†o DB
            const hashedPassword = await bcrypt.hash(data.password, 10);

            // üîπ 4. S·ª≠ d·ª•ng transaction ƒë·ªÉ ƒë·∫£m b·∫£o d·ªØ li·ªáu ƒë·ªìng b·ªô
            const result = await this.prisma.$transaction(async (prisma) => {
                // üîπ 4.1 T·∫°o User tr∆∞·ªõc
                const newUser = await prisma.user.create({
                    data: {
                        username: data.username,
                        email: data.email,
                        password: hashedPassword,
                        phone: data.phone || null,
                        role: data.role as Role,
                        dateOfBirth: data.dateOfBirth ? new Date(data.dateOfBirth) : null,
                        gender: data.gender as Gender,
                    },
                });

                let userDetailsData = null;

                // üîπ 4.2 N·∫øu l√† Resident ho·∫∑c Employee, t·∫°o th√™m UserDetails
                if (data.role === Role.Resident || data.role === Role.Employee) {
                    userDetailsData = await prisma.userDetails.create({
                        data: {
                            userId: newUser.userId,
                            apartmentNumber: data.role === Role.Resident ? 'UNKNOWN' : null,
                            buildingId: data.role === Role.Resident ? 'UNKNOWN' : null,
                            positionId: data.role === Role.Employee ? 'UNKNOWN' : null,
                            departmentId: data.role === Role.Employee ? 'UNKNOWN' : null,
                            status: data.role === Role.Employee ? EmploymentStatus.Probation : null,
                        },
                    });
                }

                return { user: newUser, userDetails: userDetailsData };
            });

            // üîπ 5. Tr·∫£ v·ªÅ API Response chu·∫©n
            return new ApiResponse(
              true,
              'User created successfully',
              [result] // D·ªØ li·ªáu bao g·ªìm user v√† userDetails (n·∫øu c√≥)
            );
        } catch (error) {
            console.error('üî• Error creating user:', error);
            throw new BadRequestException(new ApiResponse(false, error.message || 'Internal server error'));
        }
    }




    async updateUser(userId: string, data: Partial<createUserDto>): Promise<UserDto> {
        const user = await this.getUserById(userId)
        if (!user) throw new RpcException({ statusCode: 404, message: 'User not found' })

        return this.prisma.user.update({
            where: { userId },
            data,
        })
    }

    async deleteUser(userId: string): Promise<{ message: string }> {
        await this.prisma.user.delete({ where: { userId } })
        return { message: 'User deleted successfully' }
    }

    async getAllUsers()
        : Promise<{ users: UserDto[] }> {
        const users = await this.prisma.user.findMany()
        return { users: users }
    }
}
